--- a/research/index.html
+++ b/research/index.html
@@ -546,7 +546,7 @@
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/uploads/resume.pdf"><span>CV</span></a>
+            <a class="nav-link " href="/uploads/muzeeb-shaik-cv.pdf"><span>CV</span></a>
           </li>
 
           
@@ -660,21 +660,27 @@ Us,” <em>Marketing Letters</em>.  <a href="https://doi.org/10.1007/s11002-023-
 <h2 id="working-papers"><strong>Working Papers</strong></h2>
 <ul>
 <li>
-<p>“How do Communities Respond to the Trauma of Fatal School Shootings? An
-Economic Perspective,” with Mike Palazzolo, Adithya Pattabhiramaiah , and
-Shrihari Sridhar, <em>working paper</em>.</p>
+<p>“How Fatal School Shootings Impact Community Economic Activity,” with Mike Palazzolo, Adithya Pattabhiramaiah , and Shrihari Sridhar, under review at <em>Marketing Science</em>.</p>
+<ul>
+<li>Community leaders aim to improve their cities and attract economic activity through investments in public infrastructure, education, public safety, tax breaks, and workforce development. School shootings do immense harm to communities on several dimensions. While the psychological effects of these tragedies are well-documented in the literature, their economic impact has received less attention. Combining data from multiple sources, we study the effects of fatal school shootings on three barometers of economic activity: grocery purchases, vice goods purchases, and home values. We find that households in counties that experience fatal school shooting incidents decrease their purchase of groceries by about 1% in the subsequent six months. This decrease is driven mainly by the incidents occurring in liberal-leaning counties. Turning to vice goods, we find a 13% drop in cigarette spending in the six months following school shootings for conservative-leaning counties. However, there was no change in alcohol purchases in either conservative or liberal counties. Finally, we show that over a 12-month period following a fatal school shooting incident, the Zillow home value index (ZHVI) for zip codes affected by these incidents also experiences a 6.5% decline that manifests only in conservative counties. Our findings highlight the importance of city and state officials considering the far-reaching impact of fatal school shootings beyond the immediate victims and the need for economic recovery efforts when communities are affected by school shootings, considering each affected community’s unique characteristics and context.</li>
+</ul>
 </li>
 <li>
 <p>“Business-to-Business Sales Opportunity Management: A Framework, Evidence
-And Application,” with Shrihari Sridhar, and Vikas Mittal, <em>preparing for
-submission</em>.</p>
+And Application,” with Shrihari Sridhar, and Vikas Mittal, <em>preparing for submission</em>.</p>
+<ul>
+<li>To achieve sales targets with limited resources, B2B sellers must prioritize potential opportunities from a vast pool. Existing evidence suggests that arbitrary B2B decision-making often results in subpar sales management. Drawing from relationship and organizational buying literature, we create a framework linking buyer types (e.g., new bid vs. modified rebid) and opportunity traits (e.g., size) to a seller’s bidding choices and outcomes. This framework is tested on data from a major B2B service provider across 4,564 opportunities, a decade, and 23 countries. Though favorable projects involve good relationship types and low risk, they aren&rsquo;t sufficient for regional sales growth. We develop an ensemble machine learning model to predict a seller’s chance of success, factoring in complex opportunity characteristics. Additionally, we propose a combinatorial optimization approach, allowing companies to strategically manage risk and maximize regional sales potential within finite capacity. Our ensemble method enhances predictive accuracy by 11.09% over simple models, and combining it with the optimization approach shows the focal firm could have increased sales by 22%, bidding on 38% fewer projects.</li>
+</ul>
 </li>
 <li>
 <p>“Designing New Studies Using Meta-Analysis for Estimate Precision: The Case of Customer
-Satisfaction and Customer Retention,” with Han, Kyuhong, Vikas Mittal, and Shrihari Sridhar, <em>working paper</em>.</p>
+Satisfaction and Customer Retention,” with Han, Kyuhong, Vikas Mittal, and Shrihari Sridhar,  <em>preparing for submission</em>.</p>
+<ul>
+<li>Scholars often use a descriptive meta-analysis to quantitatively synthesize extant empirical research on the relationship between a focal construct and an outcome. A meta-analysis can provide more generalizable conclusions than those obtained from a single study. Yet, a typical descriptive meta-analysis only provides a snapshot of extant research at the time the meta-analysis is conducted. Further, a descriptive meta-analysis does not provide guidance on how new studies may improve the estimate precision of the focal relationship (i.e., decrease its variance and confidence interval) and, thus, further our understanding of the focal relationship. Against this background, the current study proposes an approach that assesses the estimate precision of the focal relationship from a meta-analysis. By illustrating the approach using the customer satisfaction–retention relationship, the authors address three questions: (1) how well have extant empirical studies collectively improved the estimate precision of the association between CS and retention, (2) how has the estimate precision evolved over time, and (3) what should be the best-next study to improve the estimate precision of the CS–retention relationship?</li>
+</ul>
 </li>
 <li>
-<p>“The Association of Patient Satisfaction and Quality of Care: Theory, Evidence, and Application,” with Chen, Yixing, Taehoon Im, Narendra Bosukonda, Sonam Singh, Markus Blut, Vikas Mittal, Shrihari Sridhar, and Amit G. Singal, <em>working paper</em>.  <a href="https://papers.ssrn.com/abstract=3532546" target="_blank">Link</a></p>
+<p>“The Association of Patient Satisfaction and Quality of Care: Theory, Evidence, and Application,” with Chen, Yixing, Taehoon Im, Narendra Bosukonda, Sonam Singh, Markus Blut, Vikas Mittal, Shrihari Sridhar, and Amit G. Singal, reject and resumit <em>Journal of Marketing Research</em>.  <a href="https://papers.ssrn.com/abstract=3532546" target="_blank">Link</a></p>
 </li>
 <li>
 <p>“The Economic Impact of Minority Ownership Labels on Online Platforms,” with
@@ -709,7 +715,7 @@ Sai Chand Chintala, <em>work in progress</em>.</p>
 
   
   <p class="powered-by">
-    © (2022) Muzeeb Shaik
+    © (2023) Muzeeb Shaik
   </p>
   
 
