--- a/404.html
+++ b/404.html
@@ -544,7 +544,7 @@
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/uploads/resume.pdf"><span>CV</span></a>
+            <a class="nav-link " href="/uploads/muzeeb-shaik-cv.pdf"><span>CV</span></a>
           </li>
 
           
@@ -653,7 +653,7 @@
 
   
   <p class="powered-by">
-    © (2022) Muzeeb Shaik
+    © (2023) Muzeeb Shaik
   </p>
   
 
