--- a/research/index.html
+++ b/research/index.html
@@ -640,7 +640,11 @@
 
 <div class="universal-wrapper">
   
-    <div class="article-style"><hr>
+    <div class="article-style"><style>
+body {
+text-align: justify}
+</style>
+<hr>
 <h2 id="publications"><strong>Publications</strong></h2>
 <ul>
 <li>
