--- a/teaching/index.html
+++ b/teaching/index.html
@@ -640,7 +640,11 @@
 
 <div class="universal-wrapper">
   
-    <div class="article-style"><hr>
+    <div class="article-style"><style>
+body {
+text-align: justify}
+</style>
+<hr>
 <h2 id="indiana-university-bloomington"><strong>Indiana University Bloomington</strong></h2>
 <h4 id="marketing-research-undergraduate">MARKETING RESEARCH (UNDERGRADUATE)</h4>
 <ul>
