--- a/teaching/index.html
+++ b/teaching/index.html
@@ -654,7 +654,7 @@ text-align: justify}
 <ul>
 <li>Instructor: Fall 2022 (Online section - 90 students)</li>
 </ul>
-<h4 id="students-comments">STUDENTS’ COMMENTS</h4>
+<details><summary><b>STUDENTS’ COMMENTS</b></summary> 
 <ul>
 <li>
 <p>&ldquo;Muzeeb was extremely passionate about his teaching material and you can tell that he thoroughly enjoys what he teaches/working with students. He was always very communicative and has been the most responsive I&rsquo;ve seen from a professor during my time at IU.&rdquo;</p>
@@ -663,7 +663,7 @@ text-align: justify}
 <p>&ldquo;All information and learning objectives for the class was clearly visible. I also enjoyed the use of slides and made the information very visible for me.&rdquo;</p>
 </li>
 <li>
-<p>&ldquo;This (Intro to Marketing) was one of my most enjoyable classes that I have taken here at Indiana. Professor did a great job.&rdquo;</p>
+<p>&ldquo;This (Intro to Marketing) was one of my most enjoyable classes that I have taken here at Indiana. Professor did a great job.&rdquo; </details></p>
 </li>
 </ul>
 <hr>
@@ -678,14 +678,14 @@ text-align: justify}
 <li>Guest Lecturer: Fall 2021</li>
 <li>Teaching Assistant: Fall 2019</li>
 </ul>
-<h4 id="students-comments-1">STUDENTS’ COMMENTS</h4>
+<details><summary><b>STUDENTS’ COMMENTS</b></summary> 
 <ul>
 <li>“[Muzeeb] understood the problems of students well, went beyond his own necessary capacities to ensure we understood material, and was truly passionate about the topic at hand”.</li>
 <li>“He always encouraged us to initiate our learning process and take responsibility of our work”.</li>
 <li>“Professor was very communicative with students and feedback was offered throughout projects. This was extremely helpful”.</li>
 <li>“He really wanted to see his students succeed and was very helpful when needed”.</li>
 <li>“He always made himself available to meet with us and emphasized he is there to be a resource to support us now and even in the future. Which means a lot”.</li>
-<li>“Professor taught by doing– Loved this”.</li>
+<li>“Professor taught by doing– Loved this”.</details></li>
 </ul>
 <hr>
 <h2 id="texas-tech-university"><strong>Texas Tech University</strong></h2>
