--- a/teaching/index.html
+++ b/teaching/index.html
@@ -60,7 +60,7 @@
   
     
   
-  <meta name="description" content="Visiting Assistant Professor" />
+  <meta name="description" content="Assistant Professor of Marketing" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://muzeeb-shaik.github.io/teaching/" />
@@ -303,7 +303,7 @@
   <meta property="og:site_name" content="Muzeeb Shaik" />
   <meta property="og:url" content="https://muzeeb-shaik.github.io/teaching/" />
   <meta property="og:title" content="Teaching | Muzeeb Shaik" />
-  <meta property="og:description" content="Visiting Assistant Professor" /><meta property="og:image" content="https://muzeeb-shaik.github.io/media/icon_hu3ab57a3daf530cb78cd0c632a3b11aef_41414_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Assistant Professor of Marketing" /><meta property="og:image" content="https://muzeeb-shaik.github.io/media/icon_hu3ab57a3daf530cb78cd0c632a3b11aef_41414_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://muzeeb-shaik.github.io/media/icon_hu3ab57a3daf530cb78cd0c632a3b11aef_41414_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -648,11 +648,11 @@ text-align: justify}
 <h2 id="indiana-university-bloomington"><strong>Indiana University Bloomington</strong></h2>
 <h4 id="marketing-research-undergraduate">MARKETING RESEARCH (UNDERGRADUATE)</h4>
 <ul>
-<li>Instructor: Spring 2023 (3 sections)</li>
+<li>Instructor: Spring 2023; Spring 2024</li>
 </ul>
 <h4 id="introduction-to-marketing-undergraduate---non-business-majors">INTRODUCTION TO MARKETING (UNDERGRADUATE - NON BUSINESS MAJORS)</h4>
 <ul>
-<li>Instructor: Fall 2022 (Online section - 90 students)</li>
+<li>Instructor: Fall 2022; Spring 2024 (Online section)</li>
 </ul>
 <details><summary><b>STUDENTS’ COMMENTS</b></summary> 
 <ul>
@@ -660,12 +660,22 @@ text-align: justify}
 <p>&ldquo;Muzeeb was extremely passionate about his teaching material and you can tell that he thoroughly enjoys what he teaches/working with students. He was always very communicative and has been the most responsive I&rsquo;ve seen from a professor during my time at IU.&rdquo;</p>
 </li>
 <li>
+<p>&ldquo;The instructor was able to explain extremely complicated topics with ease and I learned things I didn&rsquo;t think I was able to learn
+with his help!&rdquo;</p>
+</li>
+<li>
 <p>&ldquo;All information and learning objectives for the class was clearly visible. I also enjoyed the use of slides and made the information very visible for me.&rdquo;</p>
 </li>
 <li>
-<p>&ldquo;This (Intro to Marketing) was one of my most enjoyable classes that I have taken here at Indiana. Professor did a great job.&rdquo; </details></p>
+<p>&ldquo;This (Intro to Marketing) was one of my most enjoyable classes that I have taken here at Indiana. Professor did a great job.&rdquo;</p>
+</li>
+<li>
+<p>&ldquo;Professor Shaik was an extremely welcoming and friendly instructor. He did an excellent job presenting the material. Some of
+concepts were harder to understand, and he made sure to take the time and use the white board to illustrate what exactly we
+were doing. This was really helping for envisioning what exact maths were going on, and what they meant.&rdquo;</p>
 </li>
 </ul>
+</details>
 <hr>
 <h2 id="texas-am-university"><strong>Texas A&amp;M University</strong></h2>
 <h4 id="marketing-analytics-undergraduate">MARKETING ANALYTICS (UNDERGRADUATE)</h4>
@@ -721,7 +731,7 @@ text-align: justify}
 
   
   <p class="powered-by">
-    © (2023) Muzeeb Shaik
+    © (2024) Muzeeb Shaik
   </p>
   
 
