--- a/research/index.html
+++ b/research/index.html
@@ -60,7 +60,7 @@
   
     
   
-  <meta name="description" content="Visiting Assistant Professor" />
+  <meta name="description" content="Assistant Professor of Marketing" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://muzeeb-shaik.github.io/research/" />
@@ -303,7 +303,7 @@
   <meta property="og:site_name" content="Muzeeb Shaik" />
   <meta property="og:url" content="https://muzeeb-shaik.github.io/research/" />
   <meta property="og:title" content="Research | Muzeeb Shaik" />
-  <meta property="og:description" content="Visiting Assistant Professor" /><meta property="og:image" content="https://muzeeb-shaik.github.io/media/icon_hu3ab57a3daf530cb78cd0c632a3b11aef_41414_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Assistant Professor of Marketing" /><meta property="og:image" content="https://muzeeb-shaik.github.io/media/icon_hu3ab57a3daf530cb78cd0c632a3b11aef_41414_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://muzeeb-shaik.github.io/media/icon_hu3ab57a3daf530cb78cd0c632a3b11aef_41414_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -668,18 +668,14 @@ Us,” <em>Marketing Letters</em>.  <a href="https://doi.org/10.1007/s11002-023-
 </li>
 <li>
 <p>“Business-to-Business Sales Opportunity Management: A Framework, Evidence
-And Application,” with Shrihari Sridhar, and Vikas Mittal, <em>preparing for submission</em>. <details><summary><b>Abstract</b></summary> To achieve sales targets with limited resources, B2B sellers must prioritize potential opportunities from a vast pool. Existing evidence suggests that arbitrary B2B decision-making often results in subpar sales management. Drawing from relationship and organizational buying literature, we create a framework linking buyer types (e.g., new bid vs. modified rebid) and opportunity traits (e.g., size) to a seller’s bidding choices and outcomes. This framework is tested on data from a major B2B service provider across 4,564 opportunities, a decade, and 23 countries. Though favorable projects involve good relationship types and low risk, they aren&rsquo;t sufficient for regional sales growth. We develop an ensemble machine learning model to predict a seller’s chance of success, factoring in complex opportunity characteristics. Additionally, we propose a combinatorial optimization approach, allowing companies to strategically manage risk and maximize regional sales potential within finite capacity. Our ensemble method enhances predictive accuracy by 11.09% over simple models, and combining it with the optimization approach shows the focal firm could have increased sales by 22%, bidding on 38% fewer projects. </details></p>
+And Application,” with Shrihari Sridhar, and Vikas Mittal. <details><summary><b>Abstract</b></summary> To achieve sales targets with limited resources, B2B sellers must prioritize potential opportunities from a vast pool. Existing evidence suggests that arbitrary B2B decision-making often results in subpar sales management. Drawing from relationship and organizational buying literature, we create a framework linking buyer types (e.g., new bid vs. modified rebid) and opportunity traits (e.g., size) to a seller’s bidding choices and outcomes. This framework is tested on data from a major B2B service provider across 4,564 opportunities, a decade, and 23 countries. Though favorable projects involve good relationship types and low risk, they aren&rsquo;t sufficient for regional sales growth. We develop an ensemble machine learning model to predict a seller’s chance of success, factoring in complex opportunity characteristics. Additionally, we propose a combinatorial optimization approach, allowing companies to strategically manage risk and maximize regional sales potential within finite capacity. Our ensemble method enhances predictive accuracy by 11.09% over simple models, and combining it with the optimization approach shows the focal firm could have increased sales by 22%, bidding on 38% fewer projects. </details></p>
 </li>
 <li>
 <p>“Designing New Studies Using Meta-Analysis for Estimate Precision: The Case of Customer
-Satisfaction and Customer Retention,” with Han, Kyuhong, Vikas Mittal, and Shrihari Sridhar,  <em>preparing for submission</em>. <details><summary><b>Abstract</b></summary> Scholars often use a descriptive meta-analysis to quantitatively synthesize extant empirical research on the relationship between a focal construct and an outcome. A meta-analysis can provide more generalizable conclusions than those obtained from a single study. Yet, a typical descriptive meta-analysis only provides a snapshot of extant research at the time the meta-analysis is conducted. Further, a descriptive meta-analysis does not provide guidance on how new studies may improve the estimate precision of the focal relationship (i.e., decrease its variance and confidence interval) and, thus, further our understanding of the focal relationship. Against this background, the current study proposes an approach that assesses the estimate precision of the focal relationship from a meta-analysis. By illustrating the approach using the customer satisfaction–retention relationship, the authors address three questions: (1) how well have extant empirical studies collectively improved the estimate precision of the association between CS and retention, (2) how has the estimate precision evolved over time, and (3) what should be the best-next study to improve the estimate precision of the CS–retention relationship? </details></p>
+Satisfaction and Customer Retention,” with Han, Kyuhong, Vikas Mittal, and Shrihari Sridhar. <details><summary><b>Abstract</b></summary> Scholars often use a descriptive meta-analysis to quantitatively synthesize extant empirical research on the relationship between a focal construct and an outcome. A meta-analysis can provide more generalizable conclusions than those obtained from a single study. Yet, a typical descriptive meta-analysis only provides a snapshot of extant research at the time the meta-analysis is conducted. Further, a descriptive meta-analysis does not provide guidance on how new studies may improve the estimate precision of the focal relationship (i.e., decrease its variance and confidence interval) and, thus, further our understanding of the focal relationship. Against this background, the current study proposes an approach that assesses the estimate precision of the focal relationship from a meta-analysis. By illustrating the approach using the customer satisfaction–retention relationship, the authors address three questions: (1) how well have extant empirical studies collectively improved the estimate precision of the association between CS and retention, (2) how has the estimate precision evolved over time, and (3) what should be the best-next study to improve the estimate precision of the CS–retention relationship? </details></p>
 </li>
 <li>
 <p>“The Association of Patient Satisfaction and Quality of Care: Theory, Evidence, and Application,” with Chen, Yixing, Taehoon Im, Narendra Bosukonda, Sonam Singh, Markus Blut, Vikas Mittal, Shrihari Sridhar, and Amit G. Singal, reject and resumit at <em>Journal of Marketing Research</em>.  <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3970182" target="_blank">Link</a>  <details><summary><b>Abstract</b></summary> Health care providers and policy makers measure and report patient-satisfaction (PSAT) scores as an implicit proxy for quality of care (QOC), a metric used to reimburse physicians and determine bonus or penalties for Medicare payments. These practices assume i) a strong and positive association of subjective PSAT judgments and objective QOC outcomes (e.g., mortality, recovery time), and ii) accurate consumer beliefs about the PSAT–QOC association. Study 1 (a national survey of 9,449 respondents) shows that consumer belief about the PSAT–QOC correlation is .69. However, Study 2 reveals that the objective PSAT–QOC correlation is .24 based on a meta-analysis of 198 studies. Study 3, a choice-based conjoint analysis, shows that as consumer beliefs diverge from the objective correlation, they are more likely to choose hospitals producing worse clinical outcomes. Study 4 shows that interventions informing consumers of the objective correlation can increase the accuracy of consumer beliefs about it. For executives and regulators, the results elucidate the financial and consumer well-being risks of assuming high correspondence of consumer beliefs with objective reality, while suggesting interventions that can engender accurate consumer beliefs. Theoretically, the results suggest reimagining and evaluating the potential unintended consequences of information environments in health care.</details></p>
-</li>
-<li>
-<p>“The Economic Impact of Minority Ownership Labels on Online Platforms,” with
-Sai Chand Chintala, <em>work in progress</em>.</p>
 </li>
 </ul>
 <hr>
@@ -710,7 +706,7 @@ Sai Chand Chintala, <em>work in progress</em>.</p>
 
   
   <p class="powered-by">
-    © (2023) Muzeeb Shaik
+    © (2024) Muzeeb Shaik
   </p>
   
 
