--- a/index.html
+++ b/index.html
@@ -840,8 +840,7 @@ text-align: justify}
 <h1 id="howdy"><strong>Howdy!</strong></h1>
 <hr>
 <p>I am a quantitative marketing strategy researcher focused on understanding the financial and societal impacts of marketing actions. My expertise includes business-to-business (B2B) sales, healthcare, and education, with a strong methodological background in causal modeling, applied machine learning, and optimization.</p>
-<p>I received my Ph.D. in Business Administration (Marketing) from the <a href="https://mays.tamu.edu/" target="_blank">Mays Business School</a>, Texas A&amp;M University, co-advised by <a href="https://mays.tamu.edu/directory/shriharisridhar/" target="_blank">Hari Sridhar</a> (Texas A&amp;M University) and <a href="https://business.rice.edu/person/vikas-mittal" target="_blank">Vikas Mittal</a> (Rice University).</p>
-<p>At Indiana University, I teach Marketing Strategy. Previously, I have taught Marketing Research and Introduction to Marketing at the undergraduate level. During my doctoral studies, I taught Marketing Analytics to undergraduates at the Mays Business School, where I received the Dean’s Award for Outstanding Teaching.</p>
+<p>I received my Ph.D. in Business Administration (Marketing) from the <a href="https://mays.tamu.edu/" target="_blank">Mays Business School</a>, Texas A&amp;M University. At Indiana University, I teach Marketing Strategy. Previously, I have taught Marketing Research and Introduction to Marketing at the undergraduate level. During my doctoral studies, I taught Marketing Analytics to undergraduates at the Mays Business School, where I received the Dean’s Award for Outstanding Teaching.</p>
 <p> </p>
 <hr>
 
