--- a/teaching/index.html
+++ b/teaching/index.html
@@ -646,6 +646,10 @@ text-align: justify}
 </style>
 <hr>
 <h2 id="indiana-university-bloomington"><strong>Indiana University Bloomington</strong></h2>
+<h4 id="marketing-strategy-undergraduate">MARKETING STRATEGY (UNDERGRADUATE)</h4>
+<ul>
+<li>Instructor: Spring 2025</li>
+</ul>
 <h4 id="marketing-research-undergraduate">MARKETING RESEARCH (UNDERGRADUATE)</h4>
 <ul>
 <li>Instructor: Spring 2023; Spring 2024</li>
