--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@ text-align: justify}
 </style>
 <h1 id="howdy"><strong>Howdy!</strong></h1>
 <hr>
-<p>I am a quantitative marketing strategy researcher focused on understanding the financial and societal impacts of marketing actions. My expertise includes business-to-business (B2B) sales, healthcare, and education, with a strong methodological background in causal modeling, applied machine learning, and optimization. My research has been published or accepted at <em>Journal of Marketing Research</em>, <em>Clinical Gastroenterology and Hepatology</em>, and <em>Harvard Business Review</em>.</p>
+<p>I am a quantitative marketing strategy researcher focused on understanding the financial and societal impacts of marketing actions. My expertise includes business-to-business (B2B) sales, healthcare, and education, with a strong methodological background in causal modeling, applied machine learning, and optimization. My research has been published or accepted at <em>Journal of Marketing Research</em>, <em>Production and Operations Management</em>, <em>Clinical Gastroenterology and Hepatology</em>, and <em>Harvard Business Review</em>.</p>
 <p>I received my Ph.D. in Business Administration (Marketing) from the <a href="https://mays.tamu.edu/" target="_blank">Mays Business School</a>, Texas A&amp;M University. At Indiana University, I teach Marketing Strategy. Previously, I have taught Marketing Research and Introduction to Marketing at the undergraduate level. During my doctoral studies, I taught Marketing Analytics to undergraduates at the Mays Business School, where I received the Dean’s Award for Outstanding Teaching.</p>
 <p> </p>
 <hr>
