--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             font-family: 'Cormorant Garamond', serif;
             font-size: 1.5rem;
             font-weight: 500;
-            color: var(--ink);
+            color: var(--accent);
             text-decoration: none;
             letter-spacing: -0.02em;
         }
@@ -177,6 +177,7 @@
             margin-bottom: 0.5rem;
             animation: fadeUp 0.8s ease forwards;
             opacity: 0;
+            color: var(--accent);
         }
 
         .hero-text .subtitle {
@@ -264,6 +265,7 @@
             font-size: 2.5rem;
             font-weight: 400;
             letter-spacing: -0.02em;
+            color: var(--accent);
         }
 
         .section-header::after {
@@ -652,7 +654,7 @@
     <section class="hero" id="about">
         <div class="hero-content">
             <div class="hero-image-container">
-                <img src="https://muzeeb-shaik.github.io/author/muzeeb-shaik/avatar-old_hu24f5e6630ead304041220c87f2d90fc1_1852157_270x270_fill_q75_lanczos_center.jpg" alt="Muzeeb Shaik" class="hero-image">
+                <img src="profile.jpg" alt="Muzeeb Shaik" class="hero-image">
             </div>
             <div class="hero-text">
                 <h1>Muzeeb Shaik</h1>
