--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
             </div>
             <div class="hero-text">
                 <p class="bio">
-                    I am a quantitative marketing strategy researcher focused on understanding the financial and societal impacts of marketing actions. My expertise includes business-to-business (B2B) sales, healthcare, and education, with a strong methodological background in causal modeling, applied machine learning, and optimization. My research has been published or accepted at <em>Journal of Marketing Research</em>, <em>Production and Operations Management</em>, <em>Clinical Gastroenterology and Hepatology</em>, and <em>Harvard Business Review</em>.
+                    I am a marketing researcher focused on understanding the financial and societal impacts of marketing actions. My expertise includes business-to-business (B2B) sales, healthcare, and education, with a strong methodological background in causal modeling, applied machine learning, and optimization. My research has been published or accepted at <em>Journal of Marketing Research</em>, <em>Production and Operations Management</em>, <em>Clinical Gastroenterology and Hepatology</em>, and <em>Harvard Business Review</em>.
                 </p>
                 <div class="contact-line">
                     <a href="#" onclick="window.location.href='mai'+'lto:'+'shaikmu'+'@'+'iu.edu'; return false;">
